Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33551

Overview Welcome Page: Recent Projects list does not follow design spec

XMLWordPrintable

      The new Overview Welcome Page reuses the existing Projects list from the Projects Welcome page. Howver, the Figma design specifies it to show maximum three entries, no project file path, and also 1 Session.

      As implemented:

      As specified in the design:

        1. image-2025-09-22-18-28-54-458.png
          247 kB
          Alessandro Portale
        2. image-2025-09-22-18-29-28-366.png
          580 kB
          Alessandro Portale
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes